--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
 }
