--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
     implementation 'junit:junit:4.12'
+    implementation("com.google.guava:guava:28.2-jre")
 }
