--- a/build.gradle
+++ b/build.gradle
@@ -27,3 +27,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
+
+task avatarDocs(type: Javadoc) {
+    source = sourceSets.main.allJava
+}
