tambah satu page how to play, nambahin test

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation("com.google.guava:guava:28.2-jre")
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    compile 'org.apache.commons:commons-configuration2:2.7'
 }
 
 task avatarDocs(type: Javadoc) {
